test/errors/test_sr.lac
//-----------------------------------------------------------------------------------
//
// LaCoGen - Test epsilons
//
// 31/03/2020
//
// Test Shift/Reduce conflict
//
// -----------------------------------------------------------------------------------
  
%title        = "LaCoGen TEST SR Conflict";
%version      = "0";
%author       = "Duncan Munro";
%codeprefix   = "SRC";
%start        = <E>;


// ====================================================================
// Predefined Character sets
// ====================================================================

{nset}       = [0-9];
                                  
// ====================================================================
// Terminals
// ====================================================================

n = {nset}+;


// ====================================================================
// Rules
// ====================================================================

<E> : n
    | <E> "+" <E>
    | <E> "*" <E>
    | "(" <E> ")"
    ;
    
